...
            "value" : "zrušit"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "en-CO" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "cancel"
...
            "value" : "povolit vyhledávání"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enable discovery"
          }
        },
        "en-CO" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "enable discovery"
...
