...
        )
    ]

    static let subjects = [
        Subject(
            marks: mathMarks,
            subjectInfo: SubjectInfo(id: "math", abbrev: "M", name: "Matematika"),
            averageText: "1,78",
            markPredictionEnabled: true
        ),
        Subject(
            marks: czechMarks,
            subjectInfo: SubjectInfo(id: "czech", abbrev: "ČJ", name: "Český jazyk"),
...
